--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,15 @@ services:
   web:
     build: .
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Exposes Flask's port to the host machine
     volumes:
       - .:/app
     restart: always
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
+
 
