--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,29 @@ jobs:
     - name: Run tests
       run: |
         pytest  # Or whatever testing framework you use
+
+jobs:
+  build-and-push::
+    needs: test
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+  
+    steps:
+      - name: Checkout code
+      - uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Docker image
+        run: docker build -t jjp006/ocr1:${{ github.sha }} .
+
+      - name: Push Docker image
+        run: docker push jjp006/ocr1:${{ github.sha }}
+
+      - name: Set output image tag
+        id: vars
+        run: echo "::set-output name=tag::${{ github.sha }}"
