--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,40 +3,40 @@ name: CI
 on:
   push:
     branches:
-      - main   # or any branch you use
+      - main
   pull_request:
     branches:
-      - main   # or any branch you use
+      - main
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
 
-    - name: Run tests
-      run: |
-        pytest  # Or whatever testing framework you use
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          pytest
 
   build-and-push:
     needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-  
+
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v3
+        uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -45,14 +45,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker image
-        run: |
-          docker build -t jjp006/ocr1:${{ github.sha }} .
+        run: docker build -t jjp006/ocr1:${{ github.sha }} .
 
       - name: Push Docker image
-        run: |
-          docker push jjp006/ocr1:${{ github.sha }}
-
-      - name: Set output image tag
-        id: vars
-        run: |
-          echo "::set-output name=tag::${{ github.sha }}"
+        run: docker push jjp006/ocr1:${{ github.sha }}
