--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up SSH for EC2
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.172.31.88.232 }}  # Private IPv4 address
+        ssh-private-key: ${{ secrets.EC2_KEY }}  # Use a proper secret name
 
     - name: Copy project files to EC2
       run: |
