--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,17 +16,17 @@ jobs:
     - name: Set up SSH for EC2
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.EC2_KEY }}  # Use a proper secret name
+        ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}  # Use a proper secret name
 
     - name: Copy project files to EC2
       run: |
-        rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ec2-user@23.20.6.222:~/OCR1_project/  # Public IPv4 address
+        rsync -avz -e "ssh -o StrictHostKeyChecking=no" ./ ec2-user@${{ secret.EC2_PUBLIC_IP_HOST }}:~/OCR1_project/  # Public IPv4 address
 
     - name: Deploy using Docker Compose on EC2
       env:
         IMAGE_TAG: ${{ github.sha }}
       run: |
-        ssh -o StrictHostKeyChecking=no ec2-user@23.20.6.222 << EOF  # Public IPv4 address
+        ssh -o StrictHostKeyChecking=no ec2-user@${{ secret.EC2_PUBLIC_IP_HOST }} << EOF  # Public IPv4 address
           cd ~/OCR1_project
           IMAGE_TAG=$IMAGE_TAG docker-compose pull
           IMAGE_TAG=$IMAGE_TAG docker-compose up -d
