--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,28 @@ jobs:
           # Pull and deploy
           IMAGE_TAG=$IMAGE_TAG docker-compose pull
           IMAGE_TAG=$IMAGE_TAG docker-compose up -d
+          
+          # Update Nginx configuration
+          sudo tee /etc/nginx/sites-available/ocr1 << 'NGINX'
+          server {
+              listen 80;
+              server_name _;
+
+              location / {
+                  proxy_pass http://127.0.0.1:8000;
+                  proxy_set_header Host \$host;
+                  proxy_set_header X-Real-IP \$remote_addr;
+                  proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto \$scheme;
+              }
+          }
+          NGINX
+          
+          # Create symbolic link if it doesn't exist
+          sudo ln -sf /etc/nginx/sites-available/ocr1 /etc/nginx/sites-enabled/
+          
+          # Test and restart Nginx
+          sudo nginx -t && sudo systemctl restart nginx
         EOF
 
     - name: Clean up SSH key
