--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,6 +74,18 @@ jobs:
           
           # Test and restart Nginx
           sudo nginx -t && sudo systemctl restart nginx
+          
+          # Debug information
+          echo "=== Docker Status ==="
+          docker ps -a
+          echo "=== Docker Logs ==="
+          docker logs ocr_web
+          echo "=== Nginx Status ==="
+          sudo systemctl status nginx
+          echo "=== Port Status ==="
+          sudo netstat -tulpn | grep -E ':80|:8000'
+          echo "=== Nginx Configuration ==="
+          sudo nginx -T
         EOF
 
     - name: Clean up SSH key
