--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,13 +29,13 @@ jobs:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        ssh -i ~/.ssh/ocr1_key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP_HOST }} << EOF
+        ssh -i ~/.ssh/ocr1_key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_PUBLIC_IP_HOST }} << 'EOF'
           cd ~/OCR1_project
           
           # Debug: Show initial state
           echo "=== Initial State ==="
           docker ps -a
-          sudo netstat -tulpn | grep -E ':80|:8000'
+          sudo netstat -tulpn | grep -E ':80|:8000' || true
           
           # Clean up disk space
           sudo apt-get clean
@@ -67,7 +67,7 @@ jobs:
           IMAGE_TAG=$IMAGE_TAG docker-compose up -d
           
           # Update Nginx configuration
-          sudo tee /etc/nginx/sites-available/ocr1 << 'NGINX'
+          cat << 'NGINX' | sudo tee /etc/nginx/sites-available/ocr1
           server {
               listen 80;
               server_name _;
@@ -96,7 +96,7 @@ jobs:
           echo "=== Nginx Status ==="
           sudo systemctl status nginx
           echo "=== Final Port Status ==="
-          sudo netstat -tulpn | grep -E ':80|:8000'
+          sudo netstat -tulpn | grep -E ':80|:8000' || true
           echo "=== Nginx Configuration ==="
           sudo nginx -T
         EOF
