--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,7 @@ jobs:
           docker-compose up -d
           
           # Update Nginx configuration
-          cat << 'NGINX' | sudo tee /etc/nginx/sites-available/ocr1
-          server {
+          echo 'server {
               listen 80;
               server_name _;
 
@@ -82,8 +81,7 @@ jobs:
                   proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto \$scheme;
               }
-          }
-          NGINX
+          }' | sudo tee /etc/nginx/sites-available/ocr1
           
           # Create symbolic link if it doesn't exist
           sudo ln -sf /etc/nginx/sites-available/ocr1 /etc/nginx/sites-enabled/
