--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,17 +34,29 @@ jobs:
           --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
           --document-name "AWS-RunShellScript" \
           --parameters 'commands=[
+            "echo \"=== Starting Deployment ===\"",
             "cd ~/OCR1_project",
+            "echo \"=== Stopping Existing Containers ===\"",
             "docker-compose down --remove-orphans",
-            "docker system prune -f",
+            "echo \"=== Cleaning Up Docker Resources ===\"",
+            "docker system prune -af --volumes",
+            "echo \"=== Checking Disk Space ===\"",
+            "df -h",
+            "echo \"=== Logging into Docker Hub ===\"",
             "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
-            "docker-compose pull",
-            "docker-compose up -d",
+            "echo \"=== Pulling Latest Images ===\"",
+            "docker-compose pull --no-cache",
+            "echo \"=== Starting Containers with Rebuild ===\"",
+            "docker-compose up -d --build --force-recreate",
+            "echo \"=== Configuring Nginx ===\"",
             "echo \"server { listen 80; server_name _; location / { proxy_pass http://127.0.0.1:8000; proxy_set_header Host \$host; proxy_set_header X-Real-IP \$remote_addr; proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto \$scheme; } }\" | sudo tee /etc/nginx/sites-available/ocr1",
             "sudo ln -sf /etc/nginx/sites-available/ocr1 /etc/nginx/sites-enabled/",
             "sudo nginx -t && sudo systemctl restart nginx",
+            "echo \"=== Waiting for Application to Start ===\"",
             "sleep 10",
-            "curl -f http://localhost:8000 || exit 1"
+            "echo \"=== Checking Application Health ===\"",
+            "curl -f http://localhost:8000 || exit 1",
+            "echo \"=== Deployment Completed ===\""
           ]'
 
         
