--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,22 +40,31 @@ jobs:
             "docker-compose down --remove-orphans",
             "echo \"=== Cleaning Up Docker Resources ===\"",
             "docker system prune -af --volumes",
+
             "echo \"=== Checking Disk Space ===\"",
             "df -h",
+
             "echo \"=== Logging into Docker Hub ===\"",
             "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
+            
             "echo \"=== Pulling Latest Images ===\"",
-            "docker-compose pull --no-cache",
+            "docker pull jjp006/ocr1:$IMAGE_TAG",
+            "docker tag jjp006/ocr1:$IMAGE_TAG jjp006/ocr1:latest",
+            
             "echo \"=== Starting Containers with Rebuild ===\"",
-            "docker-compose up -d --build --force-recreate",
+            "IMAGE_TAG=$IMAGE_TAG docker-compose up -d --build --force-recreate",
+            
             "echo \"=== Configuring Nginx ===\"",
             "echo \"server { listen 80; server_name _; location / { proxy_pass http://127.0.0.1:8000; proxy_set_header Host \$host; proxy_set_header X-Real-IP \$remote_addr; proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto \$scheme; } }\" | sudo tee /etc/nginx/sites-available/ocr1",
             "sudo ln -sf /etc/nginx/sites-available/ocr1 /etc/nginx/sites-enabled/",
             "sudo nginx -t && sudo systemctl restart nginx",
+            
             "echo \"=== Waiting for Application to Start ===\"",
             "sleep 10",
+            
             "echo \"=== Checking Application Health ===\"",
             "curl -f http://localhost:8000 || exit 1",
+            
             "echo \"=== Deployment Completed ===\""
           ]'
 
