--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,36 +35,37 @@ jobs:
           --document-name "AWS-RunShellScript" \
           --parameters 'commands=[
             "echo \"=== Starting Deployment ===\"",
+            "echo \"=== Checking Directory ===\"",
+            "pwd",
+            "ls -la",
+            
+            "echo \"=== Creating Project Directory ===\"",
+            "mkdir -p ~/OCR1_project",
             "cd ~/OCR1_project",
+
+            "echo \"=== Checking Project Files ===\"",
+            "ls -la",
             "echo \"=== Stopping Existing Containers ===\"",
             "docker-compose down --remove-orphans",
             "echo \"=== Cleaning Up Docker Resources ===\"",
             "docker system prune -af --volumes",
-
             "echo \"=== Checking Disk Space ===\"",
             "df -h",
-
             "echo \"=== Logging into Docker Hub ===\"",
             "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
-            
             "echo \"=== Pulling Latest Images ===\"",
             "docker pull jjp006/ocr1:$IMAGE_TAG",
             "docker tag jjp006/ocr1:$IMAGE_TAG jjp006/ocr1:latest",
-            
             "echo \"=== Starting Containers with Rebuild ===\"",
             "IMAGE_TAG=$IMAGE_TAG docker-compose up -d --build --force-recreate",
-            
             "echo \"=== Configuring Nginx ===\"",
             "echo \"server { listen 80; server_name _; location / { proxy_pass http://127.0.0.1:8000; proxy_set_header Host \$host; proxy_set_header X-Real-IP \$remote_addr; proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto \$scheme; } }\" | sudo tee /etc/nginx/sites-available/ocr1",
             "sudo ln -sf /etc/nginx/sites-available/ocr1 /etc/nginx/sites-enabled/",
             "sudo nginx -t && sudo systemctl restart nginx",
-            
             "echo \"=== Waiting for Application to Start ===\"",
             "sleep 10",
-            
             "echo \"=== Checking Application Health ===\"",
             "curl -f http://localhost:8000 || exit 1",
-            
             "echo \"=== Deployment Completed ===\""
           ]'
 
