--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   workflow_run:
-    workflows: ["CI"]
+    workflows: ["Copy Files to EC2"]
     types:
       - completed
     branches:
@@ -23,32 +23,6 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-
-    - name: Copy files to EC2
-      env:
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        aws ssm send-command \
-          --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
-          --document-name "AWS-RunShellScript" \
-          --parameters 'commands=[
-            "echo \"=== Creating Project Directory ===\"",
-            "mkdir -p ~/OCR1_project",
-            "cd ~/OCR1_project",
-            "echo \"=== Creating docker-compose.yml ===\"",
-            "echo \"version: \\\"3\\\"\" > docker-compose.yml",
-            "echo \"services:\" >> docker-compose.yml",
-            "echo \"  web:\" >> docker-compose.yml",
-            "echo \"    image: jjp006/ocr1:${IMAGE_TAG}\" >> docker-compose.yml",
-            "echo \"    ports:\" >> docker-compose.yml",
-            "echo \"      - \\\"8000:8000\\\"\" >> docker-compose.yml",
-            "echo \"    environment:\" >> docker-compose.yml",
-            "echo \"      - FLASK_ENV=ocr_blog.flaskenv\" >> docker-compose.yml",
-            "echo \"    restart: always\" >> docker-compose.yml",
-            "echo \"=== Verifying Files ===\"",
-            "ls -la",
-            "cat docker-compose.yml"
-          ]'
 
     - name: Deploy using Docker Compose on EC2
       env:
