--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Copy Files to EC2
+name: test process to  EC2
 
 on:
   workflow_run:
@@ -35,5 +35,5 @@ jobs:
             "touch test-${{ github.sha }}-${{ github.repository }}.txt",
 
             "echo \"=== FINISHED ===\"",
-            ls -la ~/"
+            "ls -la ~/"
           ]'
