--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,4 @@
-name: test process to  EC2
-
+name: test process to EC2
 on:
   workflow_run:
     workflows: ["CI"]
@@ -12,34 +11,62 @@ jobs:
   create-files:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
+      
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-
+        
     - name: Create files command to EC2
       run: |
         SHA=${{ github.sha }}
         REPO=${{ github.repository }}
-
-        # Escape slashes in REPO for safe filename
         REPO_SAFE="${REPO//\//_}"
-
-        aws ssm send-command \
-        --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
-        --document-name "AWS-RunShellScript" \
-        --comment "Cloning repo on EC2" \
-        --parameters "commands=[
-            \"echo '=== Removing old OCR1_project directory ==='\",
-            \"touch test-${SHA}-${REPO_SAFE}.txt\",
-            \"echo '=== FINISHED ==='\",
-            \"ls -la ~/\"
-        ]"
         
+        echo "Sending command to instance: ${{ secrets.EC2_INSTANCE_ID }}"
+        
+        # Send command and capture the command ID
+        COMMAND_ID=$(aws ssm send-command \
+          --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
+          --document-name "AWS-RunShellScript" \
+          --comment "Creating test files on EC2" \
+          --parameters "commands=[
+              \"echo '=== Starting execution ==='\",
+              \"touch test-${SHA}-${REPO_SAFE}.txt\",
+              \"echo 'Created: test-${SHA}-${REPO_SAFE}.txt'\",
+              \"ls -la ~/test-*.txt\",
+              \"echo '=== FINISHED ==='\",
+              \"pwd\",
+              \"whoami\"
+          ]" \
+          --query 'Command.CommandId' \
+          --output text)
+        
+        echo "Command ID: $COMMAND_ID"
+        
+        # Wait for completion (timeout after 60 seconds)
+        echo "Waiting for command to complete..."
+        aws ssm wait command-executed \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --cli-read-timeout 60
+        
+        # Show the results
+        echo "=== COMMAND OUTPUT ==="
+        aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --query 'StandardOutputContent' \
+          --output text
+        
+        echo "=== COMMAND STATUS ==="
+        aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --query 'Status' \
+          --output text
