--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,12 +36,14 @@ jobs:
           --document-name "AWS-RunShellScript" \
           --comment "Creating test files on EC2" \
           --parameters "commands=[
+              \"#!/bin/bash\",
+              \"cd /home/ec2-user\",
               \"echo '=== Starting execution ==='\",
+              \"pwd\",
               \"touch test-${SHA}-${REPO_SAFE}.txt\",
               \"echo 'Created: test-${SHA}-${REPO_SAFE}.txt'\",
-              \"ls -la ~/test-*.txt\",
+              \"ls -la test-*.txt\",
               \"echo '=== FINISHED ==='\",
-              \"pwd\",
               \"whoami\"
           ]" \
           --query 'Command.CommandId' \
