--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,21 +30,53 @@ jobs:
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-        aws ssm send-command \
+        echo "Sending command to instance: ${{ secrets.EC2_INSTANCE_ID }}"
+
+        COMMAND_ID=$(aws ssm send-command \
           --instance-ids ${{ secrets.EC2_INSTANCE_ID }} \
           --document-name "AWS-RunShellScript" \
+          --comment "Deploy on EC2" \
           --parameters 'commands=[
-            "cd ~/OCR1_project",
-            "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
-            "docker pull jjp006/ocr1:${IMAGE_TAG}",
-            "docker tag jjp006/ocr1:${IMAGE_TAG} jjp006/ocr1:latest",
-            "export IMAGE_TAG=${IMAGE_TAG}",
-            "envsubst < docker-compose.yml > docker-compose.generated.yml",
-            "docker-compose -f docker-compose.generated.yml down --remove-orphans",
-            "docker-compose -f docker-compose.generated.yml up -d --build --force-recreate",
-            "docker ps -a",
-            "docker logs ocr_web",
-            "curl -f http://localhost:8000 || echo \"App not ready yet\"",
-            "sudo systemctl restart nginx"
-          ]'
+              "#!/bin/bash",
+              "cd /home/ubuntu",
+              "echo \"=== Starting deployment ===\"",
+              "cd ~/OCR1_project",
+              "echo \"$DOCKER_PASSWORD\" | docker login -u \"$DOCKER_USERNAME\" --password-stdin",
+              "docker pull jjp006/ocr1:${IMAGE_TAG}",
+              "docker tag jjp006/ocr1:${IMAGE_TAG} jjp006/ocr1:latest",
+              "export IMAGE_TAG=${IMAGE_TAG}",
+              "envsubst < docker-compose.yml > docker-compose.generated.yml",
+              "docker-compose -f docker-compose.generated.yml down --remove-orphans",
+              "docker-compose -f docker-compose.generated.yml up -d --build --force-recreate",
+              "docker ps -a",
+              "docker logs ocr_web",
+              "curl -f http://localhost:8000 || echo \"App not ready yet\"",
+              "sudo systemctl restart nginx"
+            ]'
         
+        --query 'Command.CommandId' \
+        --output text)
+        
+        echo "Command ID: $COMMAND_ID"
+        
+        # Wait for completion (timeout after 60 seconds)
+        echo -e "Waiting for command to complete...\n"
+        aws ssm wait command-executed \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --cli-read-timeout 60
+        
+        # Show the results
+        echo "=== COMMAND OUTPUT ==="
+        aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --query 'StandardOutputContent' \
+          --output text
+        
+        echo "=== COMMAND STATUS ==="
+        aws ssm get-command-invocation \
+          --command-id "$COMMAND_ID" \
+          --instance-id ${{ secrets.EC2_INSTANCE_ID }} \
+          --query 'Status' \
+          --output text
